--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -19,7 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
 
-          pip install bandit safety pre-commit ruff
+          pip install  pre-commit ruff
 
 
       - name: Run Security Checks
