--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -5,31 +5,10 @@ on:
     branches: [ "master" ]
 
 jobs:
-  security:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
-
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-
-          pip install  pre-commit ruff
-
-
-      - name: Run Security Checks
-        run: |
-          bandit -r . -ll -x ./tests,./venv
-          safety check
   deploy:
     environment:
       name: deployment
-    needs: [security ]
+    needs:
     runs-on: ubuntu-latest
 
     steps:
